# xgc2-camera-ros1

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.xgc2/: product.yml
.xgc2/scripts/: build_debs_in_docker.sh  check_installed_packages.sh  check_package_compliance.sh  package_debs.sh  xgc2_artifact_manifest.py
process-definitions/: xgc2-camera-driver-ros1.json  xgc2-camera-ros1.json
xgc_camera_calibration/: CMakeLists.txt  package.xml  setup.py
xgc_camera_calibration/launch/: calibrator.launch  extrinsic_calibrator.launch  extrinsic_tf.launch  intrinsic_calibrator.launch
xgc_camera_calibration/scripts/: calibrator_web.py  extrinsic_calibrator_ui.py  extrinsic_calibrator_web.py  extrinsic_tf_publisher.py  intrinsic_calibrator_web.py  run_intrinsic_calibrator.py
xgc_camera_calibration/src/xgc_camera_calibration/: __init__.py  camera_control.py  intrinsic_service.py  intrinsic_solver.py  solver.py  transforms.py  web_service.py
xgc_camera_calibration/test/: test_intrinsic_service.py  test_intrinsic_solver.py  test_intrinsic_wrapper.py  test_solver.py  test_web_service.py
xgc_camera_calibration/web/: app.js  index.html  styles.css
xgc_camera_calibration/web/extrinsic/: app.js
xgc_camera_calibration/web/intrinsic/: app.js  index.html  styles.css
xgc_camera_driver/: CMakeLists.txt  package.xml
xgc_camera_driver/config/: usb_cam.yaml
xgc_camera_driver/launch/: camera.launch  usb_cam_compat.launch
xgc_camera_driver/src/: camera_driver_node.cpp  h264_input_buffer.hpp
xgc_camera_driver/test/: synthetic_driver.test  test_h264_input_buffer.cpp  test_synthetic_driver.py
